--- a/.gitignore
+++ b/.gitignore
@@ -296,3 +296,5 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/c,vim,c++,linux,python,windows,pycharm,notepadpp,powershell
+
+test.txt # test output files
