--- a/.gitignore
+++ b/.gitignore
@@ -294,6 +294,19 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+### venv ###
+# Linux
+bin/
+lib/
+include/
+
+# Window
+Include/
+Lib/
+Scripts/
+
+# Shared
+pyvenv.cfg
 
 # End of https://www.gitignore.io/api/c,vim,c++,linux,python,windows,pycharm,notepadpp,powershell
 
