--- a/.gitignore
+++ b/.gitignore
@@ -310,4 +310,5 @@ pyvenv.cfg
 
 # End of https://www.gitignore.io/api/c,vim,c++,linux,python,windows,pycharm,notepadpp,powershell
 
-test.txt # test output files
+testing/test.txt # test output files
+testing/test.json# test output files
