--- a/src/launch/test_config.yaml
+++ b/src/launch/test_config.yaml
@@ -15,7 +15,9 @@ ROUTINES: &ROUTINES
     actions:
       - !Action
           name: RESET_MIN
-          params: [*LIMIT_LOW, *LIMIT_HIGH]
+          params:
+            low: *LIMIT_LOW
+            high: *LIMIT_HIGH
       - !Action
           name: CLEANUP
   - !Routine
@@ -25,6 +27,10 @@ ROUTINES: &ROUTINES
     actions:
       - !Action
           name: RESET_MAX
-          params: [1,2,'asdf']
+          params:
+            pos:
+              - 1
+              - 2
+              - 3
       - !Action
           name: CLEANUP
