--- a/.gitignore
+++ b/.gitignore
@@ -76,7 +76,7 @@ dkms.conf
 ### Linux ###
 *~
 
-# temporary files which can be created if a calc_correction still has a handle open of a deleted file
+# temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
 # KDE directory preferences
