--- a/src/launch/test_config.yaml
+++ b/src/launch/test_config.yaml
@@ -2,6 +2,7 @@
 CONFIG: &CONFIG !Config
   version: 0.0.1
   units: raw
+  period: 0.0001
   lower_limit: &LIMIT_LOW 0
   upper_limit: &LIMIT_HIGH 20000
   adc_sample_rate: 860
