--- a/CONFIG/oscillate.yaml
+++ b/CONFIG/oscillate.yaml
@@ -22,7 +22,8 @@ ACTIONS: &ACTIONS
       force_units: *UNITS_FORCE
       low_pos: *LIMIT_LOW
       high_pos: *LIMIT_HIGH
-      timeout: 10
+      repetitions: 3
+      speed: 4096
 # begin routine definitions
 ROUTINES: &ROUTINES
   - !Routine
