--- a/CONFIG/oscillate.yaml
+++ b/CONFIG/oscillate.yaml
@@ -22,7 +22,9 @@ ACTIONS: &ACTIONS
       force_units: *UNITS_FORCE
       low_pos: *LIMIT_LOW
       high_pos: *LIMIT_HIGH
-      timeout: 10
+      # takes whatever comes first
+      repetitions: 10
+      timeout: 3
 # begin routine definitions
 ROUTINES: &ROUTINES
   - !Routine
